--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">MVPDemo</string>
+
+    <string name="progress_dialog_loading">加载中...</string>
+
 </resources>
